# SMNA_v3.t12717

./: .gitattributes  README.md
SMG/cptec/bam/model/: CMakeLists.txt  HISTORICO  Sources.cmake
SMG/cptec/bam/model/datain/: BioChar.Tab  DiagAvailableTable  DiagDesiredTable  DiagDesiredTable.clm  DiagDesiredTable.clm.bio  DiagDesiredTable.clm.exp_nilo  DiagDesiredTable.clm_ORIGINAL  DiagDesiredTable.clm_amip  DiagDesiredTable.clm_kubota  DiagDesiredTable.clm_maip  DiagDesiredTable.clm_orig  DiagDesiredTable.pnt  DiagDesiredTable.pnt_ibis  DiagDesiredTable.pnt_old  DiagDesiredTable.pnt_oper  GridHistAvailableTable  GridHistDesiredTable  GridHistLocations.G00096  Morph.Tab  README  Units  UnitsConvFactor1Table  UnitsConvFactor2Table  UnitsLookUpTable  link.bash  sp_lw_hadgem1_3
SMG/cptec/bam/model/source/: Makefile  Makefile.common  Makefile.in  moduleswap.bash
SMG/cptec/bam/model/source/Assimilation/: GridDump.f90  SpecDump.f90  SpecDump.f90.in
SMG/cptec/bam/model/source/Diagnostics/: Diagnostics.f90  GridHistory.f90
SMG/cptec/bam/model/source/Documentation/: HISTORICO  README_DIAGNOSTIC.txt  README_INSTALL.txt
SMG/cptec/bam/model/source/Dynamics/: GridDynamics.f90  GridDynamics.f90_a  GridDynamics.f90_noeps  GridDynamics.f90_s  GridDynamics_b.f90  SemiLagrangian.f90  SemiLagrangian.f90_noeps  SemiLagrangian_b.f90  SpecDynamics.f90  SpecDynamics.f90_a  SpecDynamics.f90_noeps  SpecDynamics.f90_s  TimeStep.f90  TimeStep.f90_a  TimeStep.f90_s  TimeStep_b.f90
SMG/cptec/bam/model/source/Fields/: FieldsDynamics.f90  FieldsDynamics.f90.old  FieldsDynamics.f90_a  FieldsDynamics_b.f90  FieldsPhysics.f90  FieldsPhysics.f90.old
SMG/cptec/bam/model/source/Initialization/: Init.f90  Init.f90_a  Init.f90_optim  Init.f90_save  Init.f90_tested  Init_b.f90  NonLinearNMI.f90  Options.f90  Options.f90_noeps
SMG/cptec/bam/model/source/InputOutput/: Dumpgraph.f90  IOLowLevel.f90  InputOutput.f90
SMG/cptec/bam/model/source/Main/: Atmos_Model.f90  Atmos_Model.f90.old  Model.f90
SMG/cptec/bam/model/source/Parallelism/: Communications.f90  Communications.f90.old  Communications.f90_a  Communications_b.f90  Parallelism.f90  Sizes.f90  Sizes.f90.old
SMG/cptec/bam/model/source/Physics/: PhysicsDriver.f90  PhysicsDriver.f90_comprints  PhysicsDriver.f90_save  PhysicsDriver.f90_sigmaold  diffe
SMG/cptec/bam/model/source/Physics/BoundaryLayer/: PBL_Entrain.f90  PblDriver.f90
SMG/cptec/bam/model/source/Physics/BoundaryLayer/HostlagBoville/: Pbl_HostlagBoville.f90  Pbl_HostlagBoville.f90_saulo
SMG/cptec/bam/model/source/Physics/BoundaryLayer/MellorYamada0/: Pbl_MellorYamada0.f90  Pbl_MellorYamada0_new.f90
SMG/cptec/bam/model/source/Physics/BoundaryLayer/MellorYamada1/: Pbl_MellorYamada1.f90
SMG/cptec/bam/model/source/Physics/BoundaryLayer/ParkBretherton/: Pbl_UniversityWashington.f90  Pbl_UniversityWashington.f90soaulo
SMG/cptec/bam/model/source/Physics/Convection/: Convection.f90
SMG/cptec/bam/model/source/Physics/Convection/DeepConvection/: DeepConvection.f90
SMG/cptec/bam/model/source/Physics/Convection/LrgScl/: Prec_LrgScl.f90
SMG/cptec/bam/model/source/Physics/Convection/MicroPhysics/: MicroPhysics.f90
SMG/cptec/bam/model/source/Physics/Convection/ShallowConvection/: ShallowConvection.f90
SMG/cptec/bam/model/source/Physics/GravityWaveDrag/: GwddDriver.f90
SMG/cptec/bam/model/source/Physics/GravityWaveDrag/Alpert/: GwddSchemeAlpert.f90  GwddSchemeAlpert.f90_saulo
SMG/cptec/bam/model/source/Physics/GravityWaveDrag/CAM/: GwddSchemeCAM.f90
SMG/cptec/bam/model/source/Physics/GravityWaveDrag/ECMWF/: Gwdd_ECMWF.f90
SMG/cptec/bam/model/source/Physics/GravityWaveDrag/UKMET/: GwddSchemeCPTEC.f90  GwddSchemeUSSP.f90
SMG/cptec/bam/model/source/Physics/Radiation/: CloudOpticalProperty.f90  CloudOpticalProperty_orig.f90  CloudOpticalProperty_orig_hibrid.f90  ORIG_CloudOpticalProperty.f90  RadiationDriver.f90
SMG/cptec/bam/model/source/Physics/Radiation/COLA/: Rad_COLA.f90
SMG/cptec/bam/model/source/Physics/Radiation/Clirad/: Rad_CliRadLW.f90  Rad_CliRadLW_OLD.f90  Rad_Clirad.f90  mcai.data90
SMG/cptec/bam/model/source/Physics/Radiation/CliradTarasova/: Rad_CliRadLWTarasova.f90  Rad_CliradTarasova.f90
SMG/cptec/bam/model/source/Physics/Radiation/Clirad_orig/: Rad_CliRadLW.f90  Rad_CliRadLW.f90_saulo  Rad_CliRadLW_OLD.f90  Rad_Clirad.f90  Rad_Clirad.f90_saulo  cah.data90  coa.data90
SMG/cptec/bam/model/source/Physics/Radiation/RRTMG/: Rad_RRTMG.f90
SMG/cptec/bam/model/source/Physics/Radiation/UKMET/: Rad_UKMO.f90  sp_sw_hadgem1_3r
SMG/cptec/bam/model/source/Physics/Surface/: SfcPBLDriver.f90  Surface.f90
SMG/cptec/bam/model/source/Physics/Surface/Ocean/: Sfc_SeaFlux_Interface.f90
SMG/cptec/bam/model/source/Physics/ThermCellV0/: ModThermalCell.f90
SMG/cptec/bam/model/source/Transform/: Transform.f90
SMG/cptec/bam/model/source/Utils/: Constants.f90  Constants.f90.in  Constants.f90.old  PhysicalFunctions.f90  PhysicalFunctions.f90.old  Utils.f90  Utils.f90.old  Watches.f90  Watches.f90.old
SMG/cptec/bam/model/source/makefiles/: Makefile.cray_cray  Makefile.cray_cray32  Makefile.cray_cray32CPT  Makefile.cray_cray_O3  Makefile.cray_craydbg  Makefile.gnu_cray  Makefile.gnu_cray2  Makefile.gnu_cray_O3  Makefile.gnu_cray_dbx  Makefile.intel_cray  Makefile.intel_craydbg  Makefile.linux_gnu  Makefile.linux_intel  Makefile.linux_intel_dbx  Makefile.mac_gnu  Makefile.mac_gnuO3  Makefile.pgi_cray  Makefile.pgi_cray_O3  Makefile.pgi_cray_craydbg  Makefile.sx6  Makefile.tupay  Makefile.una_gnu  Makefile.una_intel
SMG/cptec/bam/model/source/scripts/: MODELIN  run  runModel  runModel.SX6  runModel.XE6  run_multi_SX6  run_multi_TX7  run_multi_UNA
SMG/cptec/gsi/libsrc/NCEPLIBS-bufr-develop/: CMakeLists.txt
SMG/cptec/gsi/libsrc/NCEPLIBS-bufr-develop/src/: CMakeLists.txt  bufr_c2f_interface.F90  bufr_interface.F90  bufr_types.F90  bufrlib.F90
SMG/cptec/gsi/libsrc/NCEPLIBS-bufr-develop/test/: bufr-11.6.0.tgz
SMG/utils/inctime/libmisc/: EndianUtility.f90  Makefile.am  TypeKinds.f90  dateTimeMod.f90  m_inpak90.F90  m_msg.f90  m_stdio.f90  m_string.f90  m_time.f90
(+1512 files in other folders)
